--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
     <label for="url">Google+ resource url</label>
     <!--# for test many pages-->
     <!--# testUrl = "https://plus.google.com/111840715355681175070/about?hl=en-US"-->
-    <input style="width: 500px;" name="url" id="url" value="https://plus.google.com/106797324517565881930/about?hl=en-US"/>
+    <!--<input style="width: 500px;" name="url" id="url" value="https://plus.google.com/106797324517565881930/about?hl=en-US"/>-->
+    <input style="width: 500px;" name="url" id="url"/>
     <div>
         <input type="submit" />
     </div>
