--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,20 @@
 </head>
 <body>
 <form method="post" action="/results">
-    <label for="url">Google+ resource url</label>
-    <!--# for test many pages-->
-    <!--# testUrl = "https://plus.google.com/111840715355681175070/about?hl=en-US"-->
-    <!--<input style="width: 500px;" name="url" id="url" value="https://plus.google.com/106797324517565881930/about?hl=en-US"/>-->
-    <input style="width: 500px;" name="url" id="url"/>
-    <div>
+    <p>
+        <label for="url">Google+ resource url</label>
+        <!--# for test many pages-->
+        <!--# testUrl = "https://plus.google.com/111840715355681175070/about?hl=en-US"-->
+        <!--<input style="width: 500px;" name="url" id="url" value="https://plus.google.com/106797324517565881930/about?hl=en-US"/>-->
+        <input style="width: 500px;" name="url" id="url"/>
+    </p>
+    <p>
+        <label for="pages">Number of pages</label>
+        <input style="width: 30px;" name="max_pages" id="pages"/>
+    </p>
+    <p>
         <input type="submit" />
-    </div>
+    </p>
 </form>
 </body>
 </html>
