--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script type="text/javascript" src="http://underscorejs.org/underscore-min.js"></script>
     <title>Google Plus Parser</title>
 </head>
 <body>
