--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Google Plus Parser</title>
+    <script type="text/javascript" src="http://underscorejs.org/underscore-min.js"></script>
 </head>
 <body>
 <form method="post" action="/results">
