--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
                         url: "http://map.stavinvest.ru/"
                     }, {
                         name: "Инвестиционная карта Сахалинской области",
-                        url: "http://sakhalin.mystand.ruw/"
+                        url: "http://sakhalin.mystand.ru/"
                     }, {
                         name: "Инвестиционная карта Липецкой области",
                         url: "http://map.invest-lipetsk.com/"
